samples/_failures_safe/1761313440_f2e0d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abf3de6c.c: In function ‘main’:
./samples/SAFE/__tmp_abf3de6c.c:166:5: error: expected declaration or statement at end of input
  166 |     }
      |     ^
